SEOBNR: updated wrong version of initial condition routine last night.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -57,19 +57,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named NQC_corrections",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-20cb5a4545f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterpolate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0minterp1d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minterp2d\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mNQC_corrections\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnqc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnqc_interp\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnqi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named NQC_corrections"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial condition solver for the spinning effective one-body formulation\n",
     "# See https://arxiv.org/abs/gr-qc/0508067 Section IV A, which we refer to as BCD2006\n",
@@ -84,9 +72,14 @@
     "# Input variables: will eventually structure this module as a function with the following input parameters\n",
     "m1 = 10.\n",
     "m2 = 15.\n",
-    "S1 = np.array([0.01, 0.02, -0.03])\n",
-    "S2 = np.array([0.04, -0.05, 0.06])\n",
     "f = 20.\n",
+    "# We write the spin components separately rather than in a vector to make derivative CSE straightforward\n",
+    "s1x = 0.01\n",
+    "s1y = 0.02\n",
+    "s1z = -0.03\n",
+    "s2x = 0.04\n",
+    "s2y = -0.05\n",
+    "s2z = 0.06\n",
     "\n",
     "# Initial condtions are computed with tortoise = 0; we later convert momentum if necessary\n",
     "# See LALSuite's LALSimIMRSpinEOBInitialConditionsPrec.c Line 775 and the discussion\n",
@@ -176,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,13 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Normalized, dimensionless spin vectors\n",
-    "S1hat = S1*Msqinv\n",
-    "S2hat = S2*Msqinv"
+    "s1x = s1x*Msqinv\n",
+    "s1y = s1y*Msqinv\n",
+    "s1z = s1z*Msqinv\n",
+    "s2x = s2x*Msqinv\n",
+    "s2y = s2y*Msqinv\n",
+    "s2z = s2z*Msqinv"
    ]
   },
   {
@@ -241,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +337,7 @@
     "## Step 2.a: $\\omega$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{omega}$$\n",
     "\n",
-    "<font color='red'>Is there a paper reference for this formula?  It's not quite Newtonian ($\\omega = 2 \\pi f)$.</font>\n",
+    "<font color='red'>We beleive the usual factor of 2 $\\left( \\omega = 2 \\pi f \\right)$ is not present because the plane of the polarization of the gravitational wave \"rotates at twice the orbital rate\" (see https://en.wikipedia.org/wiki/Gravitational_wave#Effects_of_passing).</font>\n",
     " \n",
     "\\begin{equation*}\n",
     "    \\omega = M \\mathcal{M}_{\\odot} \\pi f.\n",
@@ -351,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +365,7 @@
     "## Step 2.b: Initial Velocity $v$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{velocity}$$\n",
     "\n",
-    "<font color='red'>Is there a paper reference for this formula?</font>\n",
+    "<font color='red'>Is there a paper reference for this formula?  Zach suggested Kepler's Laws, but a cursory look didn't reveal a convincing link.</font>\n",
     "\n",
     "\\begin{equation*}\n",
     "    v = \\sqrt[3]{ \\omega }.\n",
@@ -379,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +394,7 @@
     "## Step 2.c: Root-finding \\[Back to [top](#toc)\\]\n",
     "$$\\label{rootfinding}$$\n",
     "\n",
-    "We will write components of the momentum vector ${\\bf p}$ in spherical coordinates with components ${\\bf p}^{r}$, ${\\bf p}^{\\theta}$, and ${\\bf p}^{\\phi}$.  In the special case in which we find ourselves, we have ([BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation (4.7)):\n",
+    "We will write components of the momentum vector ${\\bf p}$ in spherical coordinates with components ${\\bf p}^{r}$, ${\\bf p}^{\\theta}$, and ${\\bf p}^{\\phi}$.  In the special case in which we find ourselves, we have (see [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation (4.7)):\n",
     "\n",
     "\\begin{align*}\n",
     "    {\\bf p}^{\\phi} &= 0 \\\\\n",
@@ -410,7 +407,15 @@
     "    \\begin{bmatrix} \\frac{ \\partial H }{ \\partial {\\bf r}^{r} } \\\\ \\frac{ \\partial H }{ \\partial {\\bf p}^{\\theta} } \\\\ \\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} } - \\omega \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 0 \\\\ 0 \\end{bmatrix}.\n",
     "\\end{equation*}\n",
     "\n",
-    "As the Hamiltonian is given in Cartesian coordinates, this requires computing $\\frac{ \\partial H }{ \\partial {\\bf r}^{0} }$, $\\frac{ \\partial H }{ \\partial {\\bf p}^{1} }$, and $\\frac{ \\partial H }{ \\partial {\\bf p}^{2} }$ and then converting to spherical coordinates via\n",
+    "As the Hamiltonian is given in Cartesian coordinates, this requires computing $\\frac{ \\partial H }{ \\partial {\\bf r}^{0} }$, $\\frac{ \\partial H }{ \\partial {\\bf p}^{1} }$, and $\\frac{ \\partial H }{ \\partial {\\bf p}^{2} }$ and then converting to spherical coordinates.  That is, using the chain rule and recalling $\\phi = 0$ and $\\theta = \\frac{ \\pi }{ 2 }$, we find\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf r}^{r} } &= \\frac{ \\partial H }{ \\partial {\\bf r}^{0} } \\\\\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf p}^{\\theta} } &= -{\\bf r}^{0} \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\\\\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} } &= {\\bf r}^{0} \\frac{ \\partial H }{ \\partial {\\bf p}^{1} }\n",
+    "\\end{align*}\n",
+    "\n",
+    "<font color='red'>There seems to be some funny stuff going on in the numerical derivative implemented in LALSuite; will confirm once we've tested.  They use the conversion\n",
     "\n",
     "\\begin{align*}\n",
     "    \\frac{\\partial H}{\\partial {\\bf r}^{r}} &= \\frac{\\partial H}{\\partial {\\bf r}^{0}} - \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{1}}{\\bf p}^{\\phi}}{\\left({\\bf r}^{r}\\right)^{2}} + \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{2}}{\\bf p}^{\\theta}}{\\left({\\bf r}^{r}\\right)^{2}} \\\\\n",
@@ -418,9 +423,7 @@
     "    \\frac{\\partial H}{\\partial {\\bf p}^{\\phi}} &= \\frac{\\frac{\\partial H}{\\partial {\\bf p}^{1}}}{{\\bf r}^{r}}.\n",
     "\\end{align*}\n",
     "\n",
-    "(see LALSimIMRSpinEOBInitialConditionsPrec.c Lines 409--411).  As such, the values we seek to find are ${\\bf r}^{r}$, ${\\bf p}^{\\theta}$, and ${\\bf p}^{\\phi}$.\n",
-    "\n",
-    "<font color='red'>LALSuite uses the following initial guesses for the root-finding routine:\n",
+    "after setting ${\\bf p}^{\\theta} = -r {\\bf p}^{2}$ and ${\\bf p}^{\\phi} = r {\\bf p}^{1}$ (see LALSimIMRSpinEOBInitialConditionsPrec.c Lines 409--411). In case we want to note this later, LALSuite uses the following initial guesses for the root-finding routine:\n",
     "\n",
     "\\begin{align*}\n",
     "    {\\bf r}^{r} &= \\frac{ 1 }{ v^{2} } \\\\\n",
@@ -433,18 +436,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "global name 'v' is not defined",
+     "evalue": "global name 's1x' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-cb79dd6be62c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Inital root guess\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mroot_guess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Find the roots of root_func\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: global name 'v' is not defined"
+      "\u001b[0;32m<ipython-input-11-e8ed6847a214>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'pypy sympy_expression.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'cp /tmp/numpy_expressions.py .'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mne\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# We need to import the following values from the derivative routine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/tyler/nrpytutorial/tylersplayground/numpy_expressions.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msigmaKerr0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms1x\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms2x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msigmaKerr1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms1y\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms2y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msigmaKerr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms1z\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms2z\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0minvm1m2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mm2overm1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minvm1m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 's1x' is not defined"
      ]
     }
    ],
@@ -454,11 +458,13 @@
     "    Had.output_H_and_derivs()\n",
     "    !cp /tmp/sympy_expression.py .\n",
     "    !pypy sympy_expression.py\n",
+    "!cp /tmp/numpy_expressions.py .\n",
+    "import numpy_expressions as ne\n",
     "    \n",
     "# We need to import the following values from the derivative routine\n",
-    "dHdx = 1.\n",
-    "dHdp1 = 2.\n",
-    "dHdp2 = 3.\n",
+    "dHdx = ne.Hrealprm_x\n",
+    "dHdp1 = ne.Hrealprm_py\n",
+    "dHdp2 = ne.Hrealprm_pz\n",
     "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
