--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -174,15 +174,14 @@
     "par.set_parval_from_str(\"reference_metric::enable_rfm_precompute\",\"False\") # Reset to False to disable rfm_precompute.\n",
     "rfm.ref_metric__hatted_quantities()\n",
     "\n",
-    "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "\n",
+    "# Step 10: Copy SIMD/SIMD_intrinsics.h to $outdir/SIMD/SIMD_intrinsics.h\n",
     "cmd.mkdir(os.path.join(outdir,\"SIMD\"))\n",
     "shutil.copy(os.path.join(\"SIMD/\")+\"SIMD_intrinsics.h\",os.path.join(outdir,\"SIMD/\"))\n",
     "\n",
+    "# Step 11: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
     "par.generate_Cparameters_Ccodes(os.path.join(outdir))\n",
     "\n",
-    "\n",
-    "# Step 10: Generate C code for the initial data.\n",
+    "# Step 12: Generate C code for the initial data.\n",
     "IDstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=\"*uu_exact\",rhs=swid.uu_ID),\n",
     "                                          lhrh(lhs=\"*vv_exact\",rhs=swid.vv_ID)])\n",
     "with open(outdir+\"ScalarWaveCartesian_ExactSolution_single_point.h\", \"w\") as file:\n",
@@ -198,7 +197,7 @@
     "exact_solution_single_point(xx0,xx1,xx2,params,&in_gfs[IDX4S(UUGF,i0,i1,i2)],&in_gfs[IDX4S(VVGF,i0,i1,i2)]);\n",
     "\"\"\"))\n",
     "\n",
-    "# Step 11: Generate C code for scalarwave RHSs,\n",
+    "# Step 13: Generate C code for scalarwave RHSs,\n",
     "#          output to a file named \"SENR/ScalarWave_RHSs.h\".\n",
     "RHSstring = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=swrhs.uu_rhs),\n",
     "                                           lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=swrhs.vv_rhs)],\n",
