--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -105,12 +105,13 @@
     "  * [Step 1.c:](#ln) Normalized Orbital Angular Momenutm $\\hat{\\bf L}_{N}$\n",
     "  * [Step 1.d:](#rhat) Normalized Position $\\hat{\\bf r}$\n",
     "  * [Step 1.e:](#vhat) Normalized Velocity $\\hat{\\bf v}$\n",
-    "  * [Note](#note)\n",
+    "  * [Note](#step1note)\n",
     "1. [Step 2:](#step2) Compute ${\\bf r}$, ${\\bf p}_{r}$, ${\\bf p}_{\\theta}$, and ${\\bf p}_{\\phi}$\n",
     "  * [Step 2.a:](#omega) $\\omega$\n",
     "  * [Step 2.b:](#velocity) Initial Velocity $v$\n",
     "  * [Step 2.c:](#rootfinding) Root finding\n",
     "1. [Step 3:](#step3) Rotate $\\hat{\\bf L} \\to {\\bf e}_{z}$\n",
+    "  * [Note](#step3not3)\n",
     "  * [Step 3.a:](#phat) Normalize ${\\bf p}$\n",
     "  * [Step 3.b:](#lhat) $\\hat{\\bf L}$\n",
     "  * [Step 3.c:](#rotate) Rotation matrix\n",
@@ -121,7 +122,7 @@
     "  * [Step 3.h:](#rotates2) Rotate ${\\bf S}_{2}$\n",
     "  * [Step 3.i:](#rotateshat1) Rotate $\\hat{\\bf S}_{1}$\n",
     "  * [Step 3.j:](#rotateshat2) Rotate $\\hat{\\bf S}_{2}$\n",
-    "  * [Step 3.k:](#rotater) Rotate ${\\bf r}$\n",
+    "  * [Step 3.k:](#rotateq) Rotate ${\\bf q}$\n",
     "  * [Step 3.l:](#rotatep) Rotate ${\\bf p}$\n",
     "1. [Step 4:](#step4) Compute $\\dot{\\bf r}$\n",
     "  * [Step 4.a:](#carttosph) Convert from Cartesian to Spherical Coordinates\n",
@@ -300,10 +301,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='note'></a>\n",
+    "<a id='step1note'></a>\n",
     "\n",
     "## Note \\[Back to [top](#toc)\\]\n",
-    "$$\\label{note}$$\n",
+    "$$\\label{step1note}$$\n",
     "\n",
     "Since we began assuming $\\iota = 0$, we do not need to rotate $\\hat{\\bf r}$, $\\hat{\\bf v}$, $\\hat{\\bf L}_{N}$, ${\\bf S}_{1}$, ${\\bf S}_{2}$, $\\hat{\\bf S}_{1}$, or $\\hat{\\bf S}_{2}$ as is done at LALSimIMRSpinEOBInitialConditionsPrec.c Lines 840-847 (Step 1 of [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Section IV A).  In particular, the rotation matrix in this case is the $3\\times3$ identity matrix."
    ]
@@ -326,10 +327,10 @@
    "source": [
     "<a id='omega'></a>\n",
     "\n",
-    "## Step 2.a: $\\omega$ \\[Back to [top](#toc)\\]\n",
+    "## Step 2.a: Initial orbital frequency $\\omega$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{omega}$$\n",
     "\n",
-    "<font color='red'>We beleive the usual factor of 2 $\\left( \\omega = 2 \\pi f \\right)$ is not present because the plane of the polarization of the gravitational wave \"rotates at twice the orbital rate\" (see the \"Effects of passing\" section of [this Wikipedia article](https://en.wikipedia.org/wiki/Gravitational_wave#Effects_of_passing)).</font>\n",
+    "Noting that the plane of the polarization of the gravitational wave \"rotates at twice the orbital rate\" (see the \"Effects of passing\" section of [this Wikipedia article](https://en.wikipedia.org/wiki/Gravitational_wave#Effects_of_passing)), the initial orbital frequency is\n",
     " \n",
     "\\begin{equation*}\n",
     "    \\omega = M \\mathcal{M}_{\\odot} \\pi f.\n",
@@ -420,26 +421,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Unknown character (numpy_expressions.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"numpy_expressions.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import numpy as np\\ndef compute_dHdq(x, y, z, px, py, pz, s1x, s1y, s1z, s2x, s2y, s2z):\\n\\tsigmaKerr0 = s1x+s2x\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Unknown character\n"
+     ]
+    }
+   ],
    "source": [
-    "if not os.path.isfile(\"/tmp/numpy_expressions.py\"):\n",
+    "# Check if a file of partial derivative expressions has already been generated.\n",
+    "# If not, generate them!\n",
+    "if not os.path.isfile(\"numpy_expressions.py\"):\n",
     "    import Hamiltonian_and_derivs as Had\n",
     "    Had.output_H_and_derivs()\n",
-    "    !cp /tmp/sympy_expression.py .\n",
     "    !pypy sympy_expression.py\n",
-    "!cp /tmp/numpy_expressions.py .\n",
-    "\n",
-    "# We need to import the following values from the derivative routine\n",
-    "# Start here, Knowles.  Need a way to get derivs from new deriv func\n",
-    "dHdx = 0.1\n",
-    "dHdp1 = 0.2\n",
-    "dHdp2 = 0.3\n",
+    "from numpy_expressions import compute_dHdq\n",
     "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
-    "    return [ dHdx + (dHdp2*F[2] - dHdp1*F[1])/(F[0]*F[0]), -dHdp2/F[0], dHdp1/F[0] - omega ]\n",
+    "    #Recompute Hamiltonian derivatives using latest minimization guess\n",
+    "    derivs = compute_dHdq(F[0], 0., 0., 0., F[1], F[2], S1[0], S1[1], S1[2], S2[0], S2[1], S2[2])\n",
+    "    return [ derivs[0] + (derivs[5]*F[2] - derivs[4]*F[1])/(F[0]*F[0]), -derivs[5]/F[0], derivs[4]/F[0] - omega ]\n",
     "\n",
     "# Inital root guess\n",
     "root_guess = [1/(v*v), v, 0.2]\n",
@@ -466,8 +473,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step3note'></a>\n",
     "## Note \\[Back to [top](#toc)\\]\n",
-    "\n",
+    "$$\\label{step3note}$$\n",
     "\n",
     "At this point, LALSimIMRSpinEOBInitialConditionsPrec.c normalizes the Cartesian separation and momentum vectors constructed in [Step 2](#step2).  We already have a normalized separation vector $\\hat{\\bf r}$, so we skip that step."
    ]
@@ -478,12 +486,13 @@
    "source": [
     "<a id='phat'></a>\n",
     "\n",
-    "## Step 3.a: Normalize ${\\bf p}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 3.a: Normalize ${\\bf r}$ and ${\\bf p}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{phat}$$\n",
     "\n",
-    "Next we normalize the new position vector ${\\bf p}$ that we found in [Step 2](#step2):\n",
+    "Next we normalize the separation vector ${\\bf q}$ and the position vector ${\\bf p}$ we found in [Step 2](#step2):\n",
     "\n",
     "\\begin{equation*}\n",
+    "    \\hat{\\bf q} = \\frac{ {\\bf q} }{ \\left\\lvert {\\bf q} \\right\\rvert}\n",
     "    \\hat{\\bf p} = \\frac{ {\\bf p} }{ \\left\\lvert {\\bf p} \\right\\rvert}.\n",
     "\\end{equation*}\n",
     "\n",
@@ -492,11 +501,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalized momentum vector\n",
+    "# Normalize the separation and momentum vectors\n",
+    "qhat = q/norm(q)\n",
     "phat = p/norm(p)"
    ]
   },
@@ -520,11 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalized relativistic angular momentum vector\n",
+    "# Normalize the relativistic angular momentum vector\n",
     "Lhat = np.cross(rhat,phat)\n",
     "Lhat /= norm(Lhat)"
    ]
@@ -551,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,12 +790,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='rotater'></a>\n",
+    "<a id='rotateq'></a>\n",
     "\n",
-    "## Step 3.k: Rotate ${\\bf r}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{rotater}$$\n",
+    "## Step 3.k: Rotate ${\\bf q}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rotateq}$$\n",
     "\n",
-    "We rotate ${\\bf r} = {\\bf q}$.  We'll use primes to denote the rotated vector.\n",
+    "We rotate ${\\bf q}$.  We'll use primes to denote the rotated vector.\n",
     "\n",
     "\\begin{equation*}\n",
     "    {\\bf r}^{\\prime} = \\begin{bmatrix} \\hat{\\bf r}^{0} & \\hat{\\bf r}^{1} & \\hat{\\bf r}^{2} \\\\\n",
@@ -799,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,12 +883,12 @@
     "    {\\bf p}^{\\phi} &= {\\bf r}^{0}{\\bf p}^{1} \\\\\n",
     "\\end{align*}\n",
     "\n",
-    "We call a Cartesian to spherical routine at LALSimIMRSpinEOBInitialConditionsPrec.c Line 1139, and the function itself is defined on Lines 243--285."
+    "LALSuite calls a Cartesian to spherical routine at LALSimIMRSpinEOBInitialConditionsPrec.c Line 1139, and the function itself is defined on Lines 243--285."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,22 +1029,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: 'SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-ac3d4cb56ac1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# This other function writes the terms in the reverse order needed for numerical computation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Open the output file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Read output of Tutorial-SEOBNR_Documentation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# We can temporaritl\n",
     "# Compute the value of the Hamiltonian, Hreal\n",
     "# Hreal is computed in another function, written in SymPy so we can take advantage of CSE\n",
     "# This other function writes the terms in the reverse order needed for numerical computation\n",
