Added validation tests and notes to the C code library. Created a python function to generate A2B files. Other minor edits.

--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -10,9 +10,11 @@
     "\n",
     "<a id='intro'></a>\n",
     "\n",
-    "## Introduction\n",
-    "$$\\label{intro}$$\n",
+    "**Module Status:** <font color=orange><b> Self-Validated </b></font>\n",
     "\n",
+    "**Validation Notes:** These codes are modified versions of the working code used by the original `GiRaFFE`.\n",
+    "\n",
+    "## Introduction:\n",
     "This writes and documents the C code that `GiRaFFE_HO` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections to the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
     "\n",
     "These algorithms are adapted from the original `GiRaFFE` code (see [arxiv:1704.00599v2](https://arxiv.org/abs/1704.00599v2)), based on the description in [arXiv:1310.3274v2](https://arxiv.org/pdf/1310.3274v2.pdf). They have been modified to work with the NRPy+ infrastructure instead of the Einstein Toolkit. They have also been modified to use the Valencia 3-velocity instead of the drift velocity."
@@ -34,7 +36,8 @@
     "    1. [Step 1.b](#vel_cap): Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
     "    1. [Step 1.c](#update_vel): Recompute the velocities at the new timestep\n",
     "    1. [Step 1.d](#current_sheet): Enforce the Current Sheet prescription\n",
-    "1. [Step 2](#p2c): The primitive-to-conservative solver"
+    "1. [Step 2](#p2c): The primitive-to-conservative solver\n",
+    "1. [Step 3](#code_validation): Code Validation against original C code"
    ]
   },
   {
@@ -43,7 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = \"GiRaFFE_HO/\""
+    "import os\n",
+    "import cmdline_helper as cmd\n",
+    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/\"\n",
+    "cmd.mkdir(outdir)"
    ]
   },
   {
@@ -79,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -141,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -186,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -235,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -328,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -396,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -461,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -511,7 +517,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -561,7 +567,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//driver_conserv_to_prims_FFE.C\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_validation//driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -610,7 +616,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO//compute_conservatives_FFE.C\n"
+      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_validation//compute_conservatives_FFE.C\n"
      ]
     }
    ],
@@ -656,6 +662,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 3: Code Validation against original C code \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "To validate the code in this tutorial we check for agreement between the files\n",
+    "\n",
+    "1. that were written in this tutorial and\n",
+    "1. those that are stored in `GiRaFFE_HO/GiRaFFE_Ccode_library`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -664,8 +685,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing difference between original C code and this code...\n",
+      "Checking file driver_conserv_to_prims_FFE.C\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file compute_conservatives_FFE.C\n",
+      "No difference. TEST PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import difflib\n",
+    "import sys\n",
+    "\n",
+    "# Define the directory that we wish to validate against:\n",
+    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/\"\n",
+    "\n",
+    "print(\"Printing difference between original C code and this code...\")\n",
+    "# Open the files to compare\n",
+    "files_to_check = [\"driver_conserv_to_prims_FFE.C\",\"compute_conservatives_FFE.C\"]\n",
+    "\n",
+    "for file in files_to_check:\n",
+    "    print(\"Checking file \" + file)\n",
+    "    with open(os.path.join(valdir+file)) as file1, open(os.path.join(outdir+file)) as file2:\n",
+    "        # Read the lines of each file\n",
+    "        file1_lines = file1.readlines()\n",
+    "        file2_lines = file2.readlines()\n",
+    "        num_diffs = 0\n",
+    "        for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+file)):\n",
+    "            sys.stdout.writelines(line)\n",
+    "            num_diffs = num_diffs + 1\n",
+    "        if num_diffs == 0:\n",
+    "            print(\"No difference. TEST PASSED!\")\n",
+    "        else:\n",
+    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb to latex\n",
-      "[NbConvertApp] Writing 55407 bytes to Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
+      "[NbConvertApp] Writing 59589 bytes to Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
