--- a/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb
@@ -10,11 +10,14 @@
     "\n",
     "This writes and documents the C code that `GiRaFFE_HO` uses to apply boundary conditions to the GRFFE quantities. \n",
     "\n",
-    "**Status:** These algorithms are under active development, and it is unclear which routine documented here is the most appropriate to use, and whether or not the implementation is entirely correct. \n",
+    "**Module Status:** <font color=orange><b> Self-Validated </b></font>\n",
     "\n",
-    "The functions and macros defined here fall into one of two categories. The first we will work with is the `FACE_UPDATE` family, which will act on a single face, looping over each point as defined by  the parameters `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. The parameters `FACEX0`, `FACEX1`, and `FACEX2` define which face on which we wish to act; that is, two of the `FACEX` parameters must be set to `NUL` (defined as 0) while the other is set either `MAXFACE` (defined as -1) or `MINFACE` (defined as +1). For instance, if we want to fill in a ghostzone on the +x face of our grid, we must call `FACE_UPDATE` with `FACEX0 = MAXFACE`, `FACEX1 = NUL`, and `FACEX2 = NUL`. \n",
+    "**Validation Notes:** While this code has been validated against the code stored in `GiRaFFE_HO/GiRaFFE_Ccode_library` that is used by `GiRaFFE` standalone-modules, these algorithms are under active development, and it is unclear which routine documented here is the most appropriate to use, and whether or not the implementation is entirely correct. \n",
     "\n",
-    "Care must be taken to set `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max` in such a way as to be consistent with `FACEX0`, `FACEX1`, and `FACEX2`; failure to do so can result in bad data and out-of-bounds errors.\n",
+    "## Introduction: \n",
+    "The functions and macros defined here fall into one of two categories. The [first](#linear) we will work with is the `FACE_UPDATE` family, which will act on a single face, looping over each point as defined by  the parameters `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. The parameters `FACEX0`, `FACEX1`, and `FACEX2` define which face on which we wish to act; that is, two of the `FACEX` parameters must be set to `NUL` (defined as 0) while the other is set either `MAXFACE` (defined as -1) or `MINFACE` (defined as +1). For instance, if we want to fill in a ghostzone on the +x face of our grid, we must call `FACE_UPDATE` with `FACEX0 = MAXFACE`, `FACEX1 = NUL`, and `FACEX2 = NUL`. \n",
+    "\n",
+    "Care must be taken to set `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max` in such a way as to be consistent with `FACEX0`, `FACEX1`, and `FACEX2`; failure to do so can result in bad data and out-of-bounds errors. This is handled by the function `apply_bcs`, which is a part of the [second](#apply) family of functions.\n",
     "\n",
     "<a id='toc'></a>\n",
     "\n",
@@ -32,7 +35,8 @@
     "    1. [Step 2.a](#a_i_and_vi): Setting $A_i$ and $v^i$ exactly\n",
     "    1. [Step 2.b](#apply_exact): Applying the exact Boundary Conditions to $A_i$ and $v^i$    \n",
     "    1. [Step 2.c](#stilded): Setting $\\tilde{S}_i$ exactly \n",
-    "    1. [Step 2.d](#apply_stilded): Applying the exact Boundary Conditions to $\\tilde{S}_i$"
+    "    1. [Step 2.d](#apply_stilded): Applying the exact Boundary Conditions to $\\tilde{S}_i$\n",
+    "1. [Step 3](#code_validation): Code Validation against original C code"
    ]
   },
   {
@@ -41,7 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = \"GiRaFFE_HO/\""
+    "import os\n",
+    "import cmdline_helper as cmd\n",
+    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/\"\n",
+    "cmd.mkdir(outdir)"
    ]
   },
   {
@@ -70,13 +77,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Overwriting GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile $outdir/GiRaFFE_boundary_conditions.h\n",
-    "\n",
     "// Currently, we're using basic Cartesian boundary conditions, pending fixes by Zach.\n",
     "// Part P8a: Declare boundary condition FACE_UPDATE macro,\n",
     "//          which updates a single face of the 3D grid cube\n",
@@ -115,12 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "// Basic Copy boundary conditions\n",
     "#define  FACE_UPDATE_COPY(which_gf, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
     "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\n",
@@ -146,7 +153,7 @@
     "\n",
     "This macro, `FACE_UPDATE_OUTFLOW`, is poorly named at the moment; currently, it is a clone of the macro `FACE_UPDATE` that acts on the array `aux_gfs` instead of `gfs`. However, take note of the commented code below the macro - once further testing and fixes to the time evolution are completed, parts of that will be completed, those lines will be reimplemented to actually use outflow boundary conditions with linear extrapolation. For that algorithm, the macro will accept a `which_gf_0` parameter instead of `which_gf`, and operate on the gridfunctions `which_gf_0+0`, `which_gf_0+1`, and `which_gf_0+2` (that is, the macro will act on an entire 3-vector). This must be done since the different faces and components must be handled in slightly different ways. \n",
     "\n",
-    "In outflow boundary conditions, if a quantity is directed inwards (e.g. if $v^x < 0$ in the +x ghostzone), it is set to zero. Otherwise, we apply the standard linear extrapolation boundary condition."
+    "In (actual) outflow boundary conditions, if a quantity is directed inwards (e.g. if $v^x < 0$ in the +x ghostzone), it is set to zero. Otherwise, we apply the standard linear extrapolation boundary condition."
    ]
   },
   {
@@ -158,12 +165,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "// This macro acts differently in that it acts on an entire 3-vector of gfs, instead of 1.\n",
     "// which_gf_0 corresponds to the zeroth component of that vector. The if statements only \n",
     "// evaluate true if the velocity is directed inwards on the face in consideration.\n",
@@ -215,12 +223,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "void apply_bcs(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *gfs,REAL *aux_gfs) {\n",
     "    // First, we apply extrapolation boundary conditions to AD\n",
     "#pragma omp parallel for\n",
@@ -262,12 +271,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "    // Apply outflow/extrapolation boundary conditions to ValenciavU by passing VALENCIAVU0 as which_gf_0\n",
     "    for(int which_gf=VALENCIAVU0GF;which_gf<=VALENCIAVU2GF;which_gf++) {\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
@@ -291,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, this code works almost identically to above. It applies copy boundary conditions, but is currently not in use. "
+    "Once again, this code works almost identically to the above. It applies copy boundary conditions, but is currently not in use. "
    ]
   },
   {
@@ -303,12 +313,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "    // Then, we apply copy boundary conditions to StildeD and psi6Phi\n",
     "/*#pragma omp parallel for\n",
     "    for(int which_gf=3;which_gf<NUM_EVOL_GFS;which_gf++) {\n",
@@ -346,9 +357,9 @@
     "\n",
     "The next algorithms we will cover are exact boundary conditions. These are a testing tool that we can use to determine if our boundary conditions are causing a problem - since we know the exact solution to the Alfv&eacute;n wave at any future time, we can simply set the boundary conditions to this value. \n",
     "\n",
-    "**IMPORTANT:** Since we have gauge freedom in specifying the vector potential $A_i$, this vector can drift in a way that has no physical effect on the system, but will cause massive inconsistencies between the ghostzones and grid interior.\n",
+    "**IMPORTANT:** Since we have gauge freedom in specifying the vector potential $A_i$, this vector can drift in a way that has no physical effect on the system, but will cause massive inconsistencies between the ghostzones and grid interior that will propagate when taking derivatives of $A_i$.\n",
     "\n",
-    "Note that `FACE_UPDATE_EXACT` is a function, not a macro; this is necessary because macros will not let us include header files containing the equations that we wish to use here. This forces us to pass more parameters than we did before. This function works similarly to the initial data function we use, but instead loops over a more limited portion of the grid, specified by parameters specified from within `apply_bcs_EXACT`. Note also that when we define the x coordinate `xx0`, we shift it by the expected distance the wave should have travelled. **TODO: also multiply by the wavespeed**"
+    "Note that `FACE_UPDATE_EXACT` is a function, not a macro; this is necessary because macros will not let us include header files containing the equations that we wish to use here. This forces us to pass more parameters than we did before. This function works similarly to the initial data function we use, but instead loops over a more limited portion of the grid, as determined by parameters passed from within `apply_bcs_EXACT`. Note also that when we define the x coordinate `xx0`, we shift it by the expected distance the wave should have travelled. **TODO: also multiply by the wavespeed**"
    ]
   },
   {
@@ -360,12 +371,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "// A supplement to the boundary conditions for debugging. This will overwrite data with exact conditions\n",
     "void FACE_UPDATE_EXACT(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
     "                       const int n, const REAL dt,REAL *out_gfs,REAL *aux_gfs,\n",
@@ -410,12 +422,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "void apply_bcs_EXACT(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
     "                     const int n, const REAL dt,\n",
     "                     REAL *out_gfs,REAL *aux_gfs) {\n",
@@ -453,7 +466,7 @@
     "\\[Back to [top](#toc)\\]\n",
     "$$\\label{stilded}$$\n",
     "\n",
-    "This function covers the gap in the above algorithm to apply exact boundary conditions: `StildeD`. There are two different options given here: one includes the header file that is used in the initial data setup to calculate `StildeD` from the 3-velocity and magnetic field the other assumes that this step was already done when `out_gfs_exact` was filled at the current timestep (the `*_exact` arrays are filled at each timestep with the exact solution to allow for convergence testing) and copies the data from there. "
+    "This function covers the gap in the above algorithm by applying exact boundary conditions to `StildeD`. There are two different options given here: one includes the header file that is used in the initial data setup to calculate `StildeD` from the 3-velocity and magnetic field the other assumes that this step was already done when `out_gfs_exact` was filled at the current timestep (the `*_exact` arrays are filled at each timestep with the exact solution to allow for convergence testing) and copies the data from there. "
    ]
   },
   {
@@ -465,12 +478,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "// A supplement to the boundary conditions for debugging. This will overwrite data with exact conditions\n",
     "void FACE_UPDATE_EXACT_StildeD(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
     "                               REAL *out_gfs,REAL *out_gfs_exact,\n",
@@ -508,12 +522,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_HO//GiRaFFE_boundary_conditions.h\n"
+      "Appending to GiRaFFE_HO/GiRaFFE_Ccode_library//GiRaFFE_boundary_conditions.h\n"
      ]
     }
    ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
+    "\n",
     "void apply_bcs_EXACT_StildeD(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],REAL *xx[3],\n",
     "                             REAL *out_gfs,REAL *out_gfs_exact) {\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
@@ -541,6 +556,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 3: Code Validation against original C code \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "To validate the code in this tutorial we check for agreement between the files\n",
+    "\n",
+    "1. that were written in this tutorial and\n",
+    "1. those that are stored in `GiRaFFE_HO/GiRaFFE_Ccode_library`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -549,8 +579,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing difference between original C code and this code...\n",
+      "Checking file GiRaFFE_boundary_conditions.h\n",
+      "No difference. TEST PASSED!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import difflib\n",
+    "import sys\n",
+    "\n",
+    "# Define the directory that we wish to validate against:\n",
+    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/\"\n",
+    "\n",
+    "print(\"Printing difference between original C code and this code...\")\n",
+    "# Open the files to compare\n",
+    "files_to_check = [\"GiRaFFE_boundary_conditions.h\"]\n",
+    "\n",
+    "for file in files_to_check:\n",
+    "    print(\"Checking file \" + file)\n",
+    "    with open(os.path.join(valdir+file)) as file1, open(os.path.join(outdir+file)) as file2:\n",
+    "        # Read the lines of each file\n",
+    "        file1_lines = file1.readlines()\n",
+    "        file2_lines = file2.readlines()\n",
+    "        num_diffs = 0\n",
+    "        for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+file)):\n",
+    "            sys.stdout.writelines(line)\n",
+    "            num_diffs = num_diffs + 1\n",
+    "        if num_diffs == 0:\n",
+    "            print(\"No difference. TEST PASSED!\")\n",
+    "        else:\n",
+    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb to latex\n",
-      "[NbConvertApp] Writing 48976 bytes to Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
+      "[NbConvertApp] Writing 52493 bytes to Tutorial-GiRaFFE_HO_C_code_library-BCs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
