--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import os\n",
     "import cmdline_helper as cmd\n",
-    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/\"\n",
+    "outdir = \"GiRaFFE_HO/GiRaFFE_Ccode_validation/A2B\"\n",
     "cmd.mkdir(outdir)"
    ]
   },
@@ -299,7 +299,7 @@
    "source": [
     "gri.glb_gridfcs_list = []\n",
     "import GiRaFFE_HO.GiRaFFE_HO_A2B as A2B\n",
-    "A2B.GiRaFFE_HO_A2B(\"GiRaFFE_HO/GiRaFFE_Ccode_library/\")"
+    "A2B.GiRaFFE_HO_A2B(\"GiRaFFE_HO/GiRaFFE_Ccode_library/A2B\")"
    ]
   },
   {
@@ -395,53 +395,53 @@
     "  if(ORDER==8) {\n",
     "    //printf(\"Computing A to B with Order = 8...\\n\");\n",
     "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"B_from_A_order8.h\"\n",
+    "        #include \"A2B/B_from_A_order8.h\"\n",
     "    }\n",
     "  } else if(ORDER==6) {\n",
     "    //printf(\"Computing A to B with Order = 6...\\n\");\n",
     "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"B_from_A_order6.h\"\n",
+    "        #include \"A2B/B_from_A_order6.h\"\n",
     "    }\n",
     "  } else if(ORDER==4) {\n",
     "    //printf(\"Computing A to B with Order = 4...\\n\");\n",
     "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"B_from_A_order4.h\"\n",
+    "        #include \"A2B/B_from_A_order4.h\"\n",
     "    }\n",
     "  } else if(ORDER==2) {\n",
     "    //printf(\"Computing A to B with Order = 2...\\n\");\n",
     "    for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "        #include \"B_from_A_order2.h\"\n",
+    "        #include \"A2B/B_from_A_order2.h\"\n",
     "    } \n",
     "  } else if(ORDER==0) {\n",
     "    if(FACEX0==MAXFACE) {\n",
     "    //printf(\"Computing A to B at x = max...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx0_dnwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx0_dnwind.h\"\n",
     "        }\n",
     "    } else if(FACEX0==MINFACE) {\n",
     "    //printf(\"Computing A to B at x = min...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx0_upwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx0_upwind.h\"\n",
     "        }\n",
     "    } else if(FACEX1==MAXFACE) {\n",
     "    //printf(\"Computing A to B at y = max...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx1_dnwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx1_dnwind.h\"\n",
     "        }\n",
     "    } else if(FACEX1==MINFACE) {\n",
     "    //printf(\"Computing A to B at y = min...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx1_upwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx1_upwind.h\"\n",
     "        }\n",
     "    } else if(FACEX2==MAXFACE) {\n",
     "    //printf(\"Computing A to B at z = max...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx2_dnwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx2_dnwind.h\"\n",
     "        }\n",
     "    } else if(FACEX2==MINFACE) {\n",
     "    //printf(\"Computing A to B at z = min...\\n\");\n",
     "        for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) {\n",
-    "            #include \"B_from_A_order2_dirx2_upwind.h\"\n",
+    "            #include \"A2B/B_from_A_order2_dirx2_upwind.h\"\n",
     "        }\n",
     "    } else {\n",
     "        printf(\"ERROR. FACEX parameters not set properly.\\n\");\n",
@@ -603,7 +603,7 @@
     "import sys\n",
     "\n",
     "# Define the directory that we wish to validate against:\n",
-    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/\"\n",
+    "valdir = \"GiRaFFE_HO/GiRaFFE_Ccode_library/A2B\"\n",
     "\n",
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
