FishboneMoncriefID: Update validation status, update a little bit of verbiage

--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -16,7 +16,7 @@
     "### NRPy+ Source Code for this module: [FishboneMoncriefID/FishboneMoncriefID.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py)\n",
     "\n",
     "## Introduction:\n",
-    "This goal of this module will be to construct Fishbone-Moncrief initial data for GRMHD simulations in a format suitable for the Einstein Toolkit (ETK). We will be using the equations as derived in [the original paper](http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1976ApJ...207..962F&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf), which will hereafter be called \"***the FM paper***\". Since we want to use this with the ETK, our final result will be in Cartesian coordinates. The natural coordinate system for these data is spherical, however, so we will use reference_metric.py to help with the coordinate transformation.\n",
+    "This goal of this module will be to construct Fishbone-Moncrief initial data for GRMHD simulations in a format suitable for the Einstein Toolkit (ETK). We will be using the equations as derived in [the original paper](http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?1976ApJ...207..962F&amp;data_type=PDF_HIGH&amp;whole_paper=YES&amp;type=PRINTER&amp;filetype=.pdf), which will hereafter be called \"***the FM paper***\". Since we want to use this with the ETK, our final result will be in Cartesian coordinates. The natural coordinate system for these data is spherical, however, so we will use [reference_metric.py](../edit/reference_metric.py) ([**Tutorial**](Tutorial-Reference_Metric.ipynb)) to help with the coordinate transformation.\n",
     "\n",
     "This notebook documents the equations in the NRPy+ module [FishboneMoncrief.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py).  Then, we will build an Einstein Toolkit [thorn](Tutorial-ETK_thorn-FishboneMoncriefID.ipynb) to set this initial data."
    ]
@@ -1057,17 +1057,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
       "IDalpha - fmid.IDalpha = 0\n",
       "rho_initial - fmid.rho_initial = 0\n",
       "hm1 - fmid.hm1 = 0\n",
@@ -1101,12 +1090,8 @@
    "source": [
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
-    "\n",
     "import FishboneMoncriefID.FishboneMoncriefID as fmid\n",
     "fmid.FishboneMoncriefID()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "\n",
     "print(\"IDalpha - fmid.IDalpha = \" + str(IDalpha - fmid.IDalpha))\n",
     "print(\"rho_initial - fmid.rho_initial = \" + str(rho_initial - fmid.rho_initial))\n",
@@ -1146,7 +1131,7 @@
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-FishboneMoncriefID.ipynb to latex\n",
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 8, column 1)\n",
-      "[NbConvertApp] Writing 130651 bytes to Tutorial-FishboneMoncriefID.tex\n",
+      "[NbConvertApp] Writing 125808 bytes to Tutorial-FishboneMoncriefID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
