--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
+    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** While this compiles, it has not been validated against the old version of the code.\n",
+    "**Validation Notes:** Agrees with trusted Fishbone-Moncrief initial data module in HARM3D. Also generates results in agreement with trusted version sent to Event Horizon Telescope (EHT) GRMHD code comparison project collaborators. This thorn was used for the [IllinoisGRMHD](http://illinoisgrmhd.net) contribution to the [EHT GRMHD code comparison project](https://arxiv.org/abs/1904.04923).\n",
     "\n",
     "### NRPy+ Source Code for this module: [FishboneMoncriefID/FishboneMoncriefID.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py) [\\[tutorial\\]](Tutorial-FishboneMoncriefID.ipynb) Constructs SymPy expressions for plane-wave initial data\n",
     "\n",
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
+      "Writing FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/interface.ccl\n"
+      "Writing FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/param.ccl\n"
+      "Writing FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/schedule.ccl\n"
+      "Writing FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
+      "Writing FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
@@ -601,7 +601,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-FishboneMoncriefID.ipynb to latex\n",
-      "[NbConvertApp] Writing 79070 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\n",
+      "[NbConvertApp] Writing 60175 bytes to Tutorial-ETK_thorn-FishboneMoncriefID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -625,21 +625,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
